--- a/src/Project.ipynb
+++ b/src/Project.ipynb
@@ -1536,95 +1536,13 @@
    "id": "cbb35dfe-0ba1-40e1-a1d4-05c9cad9cb49",
    "metadata": {},
    "source": [
-    "For the limits that $\\epsilon << 1$ and $f>>1$, we can decompose the angle $\\phi$ into a fast component $\\xi$ and a slow component $\\Phi$, such that\n",
+    "For the limits that $\\epsilon << 1$ and $f>>1$ (or small $a$ and large $\\nu$), we can decompose the angle $\\phi$ into a fast component $\\xi$ and a slow component $\\Phi$, such that\n",
     "$$\n",
     "\\phi = \\Phi + \\xi.\n",
     "$$\n",
-    "We recall our differential equation,\n",
+    "We recall our differential equation in the original form,\n",
     "$$\n",
-    "\\ddot{\\phi} = - \\omega_0^2(1+\\epsilon f^2 \\cos{(f \\omega_0 t)})\\sin{(\\phi)}.\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cb4d7aa4-b886-48eb-8aa1-1dd40dee0f74",
-   "metadata": {},
-   "source": [
-    "Let $\\tau = \\omega_0 t$, and let primes be the notation for derivatives with respect to $\\tau$. Then,\n",
-    "$$\n",
-    "\\ddot{\\phi} = - \\omega_0^2(1+\\epsilon f^2 \\cos{(f \\tau)})\\sin{(\\phi)}.\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7607546b-e45b-4712-ac6c-baf1665b27f8",
-   "metadata": {},
-   "source": [
-    "Plugging in our decomposition, we get the equation of motion,\n",
-    "$$\n",
-    "\\ddot{\\Phi} + \\ddot{\\xi} = -\\omega^2_0 ( 1 + \\epsilon f^2 \\cos{(f\\tau)}) \\sin{(\\Phi + \\xi)}.\n",
-    "$$\n",
-    "\n",
-    "Using an identity for the sine addition, this equation exactly equals\n",
-    "$$\n",
-    "\\ddot{\\Phi} + \\ddot{\\xi} = -\\omega^2_0 ( 1 + \\epsilon f^2 \\cos{(f\\tau)}) (\\sin{(\\Phi)}\\cos{(\\xi)} + \\cos{(\\Phi)}\\sin{(\\xi)}).\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8d07a908-86fb-414c-a837-29e8cc7a6ec8",
-   "metadata": {},
-   "source": [
-    "In the $\\epsilon << 1$ limit, we can apply a small angle approximation, as the displacement will be small. This implies that $\\sin{(\\xi)}\\approx \\xi$ and $\\cos{(\\xi)}\\approx 1$. Hence,\n",
-    "$$\n",
-    "\\ddot{\\Phi} + \\ddot{\\xi} \\approx -\\omega^2_0 ( 1 + \\epsilon f^2 \\cos{(f\\tau)}) (\\sin{(\\Phi)}+ \\cos{(\\Phi)}\\xi).\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "38a085a3-8dba-4be2-b5b1-5da9fed85225",
-   "metadata": {},
-   "source": [
-    "Expanding this we get four terms,\n",
-    "$$\n",
-    "\\ddot{\\Phi} + \\ddot{\\xi} \\approx -\\omega^2_0\\sin{(\\Phi)} - \\omega^2_0 \\xi \\cos{(\\Phi)} - \\omega^2_0 \\epsilon f^2 \\cos{(f\\tau)} \\sin{(\\Phi)} - \\omega^2_0 \\epsilon f^2 \\xi \\cos{(f\\tau)} \\cos{(\\Phi)}.\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "689b8b63-9ada-4d2e-9840-650af708619a",
-   "metadata": {},
-   "source": [
-    "Doing some simplification by substituting $f^2$, we get\n",
-    "$$\n",
-    "\\ddot{\\Phi} + \\ddot{\\xi} \\approx -\\omega^2_0\\sin{(\\Phi)} - \\omega^2_0 \\xi \\cos{(\\Phi)} - \\nu^2 \\epsilon \\cos{(f\\tau)} \\sin{(\\Phi)} - \\nu^2 \\epsilon \\xi \\cos{(f\\tau)} \\cos{(\\Phi)}.\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a528a8f2-4e87-42a7-a7b8-44b8994ce915",
-   "metadata": {},
-   "source": [
-    "We can isolate the $\\xi$ terms to get a relation like\n",
-    "$$\n",
-    "\\ddot{\\xi} \\approx -\\xi \\cos{(\\Phi)} (\\omega^2_0  + \\epsilon \\nu^2 \\cos{(f\\tau)}).\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8bc36e14-9af1-48bd-9be8-1ed9eb9e4abb",
-   "metadata": {},
-   "source": [
-    "We can solve this directly. Focusing on the motion only, we can ignore the integration constants and see that\n",
-    "$$\n",
-    "\\xi = \n",
+    "\\ddot{\\phi} = - (g+a\\nu^2 \\cos{(\\nu t)}) \\frac{\\sin{(\\phi)}}{l}.\n",
     "$$"
    ]
   },
@@ -1632,7 +1550,65 @@
    "cell_type": "markdown",
    "id": "5e1844ff-ba26-434c-a50c-de61734b7550",
    "metadata": {},
-   "source": []
+   "source": [
+    "In this decomposition, we assume the fast component $\\xi$ is small. If we actually impose the substitution, we get the equation\n",
+    "$$\n",
+    "\\ddot{\\Phi} + \\ddot{\\xi} = -\\left( g+a\\nu^2 \\cos{(\\nu t)} \\right) \\frac{\\sin{(\\Phi + \\xi)}}{l}.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ff16eb3-e09f-485b-bc4f-ddc5d0b18dd3",
+   "metadata": {},
+   "source": [
+    "We can use the sum of sines formula and distribute to get four terms:\n",
+    "$$\n",
+    "\\ddot{\\Phi} + \\ddot{\\xi} = -\\frac{g}{l} \\sin{(\\Phi)}\\cos{(\\xi)} - \\frac{g}{l} \\cos{(\\Phi)} \\sin{(\\xi)} - \\frac{a\\nu^2}{l}\\cos{(\\nu t)}\\sin{(\\Phi)}\\cos{(\\xi)} - \\frac{a\\nu^2}{l}\\cos{(\\nu t)}\\cos{(\\Phi)} \\sin{(\\xi)}.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68b0828e-5ad9-49e1-9404-7b51f2109f17",
+   "metadata": {},
+   "source": [
+    "With our assumption of small $\\xi$, we can Taylor expand to first order such that $\\sin{(\\xi)}\\approx \\xi$ and $\\cos{(\\xi)}\\approx 1$. Hence,\n",
+    "$$\\tag{i}\n",
+    "\\ddot{\\Phi} + \\ddot{\\xi} \\approx -\\frac{g}{l} \\sin{(\\Phi)} - \\frac{g}{l} \\cos{(\\Phi)} \\xi - \\frac{a\\nu^2}{l}\\cos{(\\nu t)}\\sin{(\\Phi)} - \\frac{a\\nu^2}{l}\\cos{(\\nu t)}\\cos{(\\Phi)}\\xi.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9227eb82-7026-4a0c-b070-f66b1b6755ec",
+   "metadata": {},
+   "source": [
+    "On the fast time scales of $\\xi$, the slow motion $\\Phi$ will have a very small $\\ddot{\\Phi}$. Because of this, we can say that any $\\Phi$ terms on fast time scales are effectively unchanging, and due to small $\\xi$, we can roughly approximate $\\ddot{\\xi}$ to get,\n",
+    "$$\n",
+    "\\ddot{\\xi} \\approx -\\frac{a\\nu^2}{l}\\cos{(\\nu t)} \\sin{(\\Phi)}.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17f932c4-6a5a-40c8-a6de-24ba93118046",
+   "metadata": {},
+   "source": [
+    "We integrate twice and ignore the integration constants, as we'll absorb them into $\\Phi$, giving us\n",
+    "$$\n",
+    "\\xi(t) \\approx \\frac{a}{l} \\cos{(\\nu t)} \\sin{(\\Phi(t))}.\n",
+    "$$\n",
+    "This is the fast component $\\xi(t)$ that oscillates at frequency $\\nu$ with an amplitude proportional to $\\frac{a}{l}\\sin{(\\Phi(t))}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3768bd5-ae00-4eaf-aeb1-ad29718ee694",
+   "metadata": {},
+   "source": [
+    "For the slow motion, we return to (i) and Taylor expand due to small $\\xi$ such that $\\sin{(\\xi)}\\approx \\xi$ and $\\cos{(\\xi)}\\approx 1- \\xi^2/2$. We do this and substitue in the expression for $\\xi(t)$ as well:"
+   ]
   },
   {
    "cell_type": "markdown",
